[package]
name = "osu-types"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.4"
serde = { version = "1.0.130", features = ["derive"], optional = true }

[profile.release]
opt-level = "s"