[package]
name = "osz2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
byteorder = "1.4.3"
num_enum = "0.5.4"
xtea = { git = "https://github.com/Brekcel/xtea" }
bytemuck = "1.7.2"
osu-types = { path = "../osu-types", features = ["serde"] }
